# lychee-declarative

./: CMakeLists.txt  README.md
.github/workflows/: archlinux-build.yaml
lychee_quickcontrols2style/: BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  DelayButton.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  HorizontalHeaderView.qml  ItemDelegate.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  PageIndicator.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RangeSlider.qml  ScrollBar.qml  ScrollIndicator.qml  SelectionRectangle.qml  Slider.qml  SpinBox.qml  SplitView.qml  StackView.qml  SwipeDelegate.qml  Switch.qml  SwitchDelegate.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  (+7 more)
lychee_quickcontrols2style/impl/: CMakeLists.txt  CursorDelegate.qml  DialogButtonBoxDelegate.qml  qquicklycheecursorflashtimer.cpp  qquicklycheecursorflashtimer_p.h  qquicklycheestyle.cpp  qquicklycheestyle_p.h
src/: CMakeLists.txt
